--- a/Responsive Navbar/style.css
+++ b/Responsive Navbar/style.css
@@ -1,11 +1,73 @@
+/* body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin:0;
+    padding: 0;
+}
+
 .nav-bar{
     background-color: grey;
-    padding: 10px;
+    /* padding: 5px; */
+    /* display: flex;
+    justify-content: space-evenly;
+    
+    
     
 }
 a{
     padding: 10px;
-    border-radius: 15px;
-    background-color: black;
+    border-radius: 5px;
+    /* background-color: black; */
+    /* float: left;
+    display: block;
     color: azure;
+    overflow: hidden;
+    text-align: center; */
+    
+    
+    
+/* } */
+/* a:hover{
+    cursor: pointer;
+    color: rgb(10, 10, 10);
+    background-color: rgb(252, 250, 250);
+    transition:background-color 0.5s ease;
+    
+} */
+/* @media screen and (max-width: 600px){
+    .nav-bar a{
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    
+}  */
+
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+}
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+@media screen and (max-width: 600px) {
+    .navbar a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
