--- a/Responsive Navbar/style.css
+++ b/Responsive Navbar/style.css
@@ -60,10 +60,37 @@ body {
     padding: 14px 16px;
     text-decoration: none;
 }
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
+.navbar .dropdown {
+    float: left;
+    overflow: hidden;
 }
+.navbar .dropdown .dropbtn {
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+}
+.navbar .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.navbar .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.navbar .dropdown-content a:hover {
+    background-color: #ddd;
+}
+.navbar .dropdown:hover .dropdown-content {
+    display: block;
+}
+
 @media screen and (max-width: 600px) {
     .navbar a {
         float: none;
