--- a/Responsive Navbar/style.css
+++ b/Responsive Navbar/style.css
@@ -48,13 +48,20 @@ body {
     margin: 0;
     padding: 0;
 }
+img{
+    width: 60px;
+    height: 60px;
+}
 .navbar {
+    /* margin-top: 50px; */
     background-color: #333;
     overflow: hidden;
 }
 .navbar a {
     float: left;
-    display: block;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
     color: white;
     text-align: center;
     padding: 14px 16px;
